--- a/FrontEnd/src/components/Navbar.css
+++ b/FrontEnd/src/components/Navbar.css
@@ -31,6 +31,11 @@
     font-weight: bold;
     color: #2c3e50;
   }
+
+  .main-nav a:hover {
+    font-weight: bold;
+    color: #2c3e50;
+  }
   
   .main-nav a.router-link-exact-active {
     color: #42b983;
