--- a/FrontEnd/src/pages/Login.css
+++ b/FrontEnd/src/pages/Login.css
@@ -15,6 +15,7 @@
     border-color: #00bc77;
     background-color: #00bc77;
     color: #fff;
+    text-decoration: underline;
   }
   
   .sign-in-content {
@@ -24,10 +25,6 @@
     margin: 0 auto;
     margin-top: 3rem;
     padding: 2rem;
-  }
-  
-  .sign-in-icon {
-    font-size: 5rem;
   }
   
   .input-remember {
