--- a/FrontEnd/src/pages/UserPage.css
+++ b/FrontEnd/src/pages/UserPage.css
@@ -12,6 +12,11 @@
     text-align: left;
     margin-bottom: 2rem;
   }
+
+.account.dark {
+  background-color: #2c3e50;
+  color: white;
+}
   
   .account-amount {
     margin: 0;
