dernières  corrections avant la soutenance

--- a/FrontEnd/src/pages/Edit.css
+++ b/FrontEnd/src/pages/Edit.css
@@ -27,9 +27,6 @@ form {
     margin-right: 30px;
     background-color: #00bc77;
     min-width: 150px;
+    color: #FFFF;
 }
-/* .edit-page .account {
-    background-color: #2c3e50;
-    color: #ffff;
-   
-} */
+
