--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -34,12 +34,12 @@ a:hover {
 }
 
 h1 {
-  font-size: 3.2em;
   line-height: 1.1;
+  
 }
 
 button {
-  border-radius: 8px;
+  
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -62,9 +62,9 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
+  /* a:hover {
     color: #747bff;
-  }
+  } */
   button {
     background-color: #f9f9f9;
   }
