--- a/FrontEnd/src/pages/Login.css
+++ b/FrontEnd/src/pages/Login.css
@@ -17,7 +17,6 @@
     color: #fff;
     text-decoration: underline;
   }
-  
   .sign-in-content {
     box-sizing: border-box;
     background-color: white;
@@ -26,7 +25,12 @@
     margin-top: 3rem;
     padding: 2rem;
   }
-  
+  .flex-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
   .input-remember {
     display: flex;
   }
