--- a/FrontEnd/src/pages/UserPage.css
+++ b/FrontEnd/src/pages/UserPage.css
@@ -14,8 +14,8 @@
   }
 
 .account.dark {
-  background-color: #2c3e50;
-  color: white;
+  background-color: #213547;
+  color: #fff;
 }
   
   .account-amount {
@@ -51,6 +51,9 @@
   .header {
     color: #fff;
     margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
   .transaction-button {
