--- a/designs/css/main.css
+++ b/designs/css/main.css
@@ -257,11 +257,15 @@ body {
   color: #fff;
   font-weight: bold;
   padding: 10px;
+  margin-left: 3rem;
 }
 
 .header {
   color: #fff;
   margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .transaction-button {
