correction apres soutenance

--- a/FrontEnd/src/components/featuresSection/FeaturesItem.css
+++ b/FrontEnd/src/components/featuresSection/FeaturesItem.css
@@ -1,7 +1,12 @@
 .feature-item {
     flex: 1;
     padding: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
 .feature-icon {
     width: 100px;
     border: 10px solid #00bc77;
