--- a/FrontEnd/src/components/Navbar.css
+++ b/FrontEnd/src/components/Navbar.css
@@ -45,7 +45,10 @@
     text-decoration: none;
     margin-right: 0.5rem;
   }
-  
+  .main-nav-item i {
+    
+    margin-right: 0.5rem;
+  }
   .main-nav-item:hover {
     text-decoration: underline;
   }
