--- a/FrontEnd/src/pages/UserPage.css
+++ b/FrontEnd/src/pages/UserPage.css
@@ -47,13 +47,17 @@
     font-weight: bold;
     padding: 10px;
   }
-  
+  .edit-button:hover {
+    color: #fff;
+    background-color: #00a864;
+  }
   .header {
     color: #fff;
     margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
   }
   
   .transaction-button {
