--- a/FrontEnd/src/components/featuresSection/FeaturesContainer.css
+++ b/FrontEnd/src/components/featuresSection/FeaturesContainer.css
@@ -7,6 +7,8 @@
   @media (min-width: 920px) {
     .features {
       flex-direction: row;
+      margin-bottom: auto;
+      margin-top: auto;
       
     }
   }
